# machine-learning-chatbot

./: .gitignore  README.md  pyproject.toml
src/machine-learning-chatbot/: app_gpt4all.py  app_old.py  langchain_gpt4.py  langchain_gpt4all.py  learn_pdf.py  pdf_as_context.py
tests/: test_version.py
