[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf-chatbot"
version = "0.0.1"
description = ""
dependencies = [
    "langchain ==0.0.352",
    "openai ==1.6.1",
    "chromadb ==0.4.21",
    "pymupdf",
    "tiktoken ==0.5.2",
    "gpt4all ==2.0.2",
    "faiss-cpu ==1.7.4",
    "transformers ==4.36.2",
    "sentence-transformers ==2.2.2",
]
