[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "machine-learning-chatbot"
version = "0.0.1"
description = ""
dependencies = [
    "pymupdf",
    "chromadb ==0.4.21",
    "faiss-cpu ==1.7.4",
    "gpt4all ==2.0.2",
    "langchain ==0.0.352",
    "openai ==1.6.1",
    "sentence-transformers ==2.2.2",
    "tiktoken ==0.5.2",
    "transformers ==4.36.2",
]
